MR3: photo list page implementation, photo search functionality, refactoring to use sass.

--- a/src/assets/i18n/_en.json
+++ b/src/assets/i18n/_en.json
@@ -1,19 +1,27 @@
 {
-  "shared.not.found.error": "We could not find what you were looking for.",
+  "shared.error.bad.request": "Error 400: Bad request, please try again.",
+  "shared.error.not.found": "Error 404: Sorry, we could not find what you were looking for.",
+  "shared.error.internal.server": "Error 500: Server error, please try again later.",
   "photo.name": "Photo name:",
   "photo.upload.date": "Upload date:",
   "photo.tags": "Tags:",
   "photo.description": "Description:",
   "photo.upload": "Upload photo",
+  "photo.form.tags.label": "Enter label:",
   "photo.buttons.tag.add": "Add tag",
-  "photo.buttons.upload.photo": "Upload photo",
   "photo.form.name.label": "Enter photo name:",
   "photo.form.name.error": "Invalid name",
   "photo.form.image.label": "Upload photo:",
   "photo.form.image.error": "Invalid photo",
   "photo.form.preview": "Photo preview",
-  "photo.form.tags.label": "Enter label:",
   "photo.form.description.label": "Enter photo description:",
+  "photo.buttons.upload.photo": "Upload photo",
+  "photo.search.name.label": "Search by photo name",
+  "photo.search.expand.label": "Advanced search",
+  "photo.search.id.label": "by id:",
+  "photo.search.description.label": "by description:",
+  "photo.search.date.start.label": "upload date from:",
+  "photo.search.date.end.label": "upload date to:",
   "header.upload": "Upload photo",
   "header.language.english": "English",
   "header.language.lithuanian": "Lietuvių"
