--- a/src/assets/i18n/_lt.json
+++ b/src/assets/i18n/_lt.json
@@ -1,19 +1,28 @@
 {
-  "shared.not.found.error": "Rezultatas nerastas.",
+  "shared.error.bad.request": "",
+  "shared.error.not.found": "",
+  "shared.error.internal.server": "",
   "photo.name": "Nuotraukos pavadinimas:",
   "photo.upload.date": "Įkėlimo data:",
   "photo.tags": "Nuotraukos žymės:",
   "photo.description": "Nuotraukos aprašas:",
   "photo.upload": "Įkelti nuotrauką",
+  "shared.not.found.error": "Rezultatas nerastas.",
+  "photo.form.tags.label": "Įveskite žymę:",
   "photo.buttons.tag.add": "Pridėti žymę",
-  "photo.buttons.upload.photo": "Įkelti nuotrauką",
   "photo.form.name.label": "Įveskite nuotraukos pavadinimą:",
   "photo.form.name.error": "Pavadinimas netinkamas",
   "photo.form.image.label": "Įkelti nuotrauką:",
   "photo.form.image.error": "Nuotrauka netinkama",
   "photo.form.preview": "Nuotraukos peržiūra",
-  "photo.form.tags.label": "Įveskite žymę:",
   "photo.form.description.label": "Įveskite nuotraukos aprašą:",
+  "photo.buttons.upload.photo": "Įkelti nuotrauką",
+  "photo.search.name.label": "Ieškoti pagal nuotraukos pavadinimą",
+  "photo.search.expand.label": "",
+  "photo.search.id.label": "",
+  "photo.search.description.label": "",
+  "photo.search.date.start.label": "",
+  "photo.search.date.end.label": "",
   "header.upload": "Įkelti nuotrauką",
   "header.language.english": "English",
   "header.language.lithuanian": "Lietuvių"
