MR3: code cleanup

--- a/src/assets/i18n/_en.json
+++ b/src/assets/i18n/_en.json
@@ -1,12 +1,13 @@
 {
-  "shared.error.bad.request": "Error 400: Bad request, please try again.",
-  "shared.error.not.found": "Error 404: Sorry, we could not find what you were looking for.",
-  "shared.error.internal.server": "Error 500: Server error, please try again later.",
+  "shared.error.400": "Error 400: Bad request, please try again.",
+  "shared.error.404": "Error 404: Sorry, we could not find what you were looking for.",
+  "shared.error.500": "Error 500: Server error, please try again later.",
   "photo.name": "Photo name:",
   "photo.upload.date": "Upload date:",
   "photo.tags": "Tags:",
   "photo.description": "Description:",
   "photo.upload": "Upload photo",
+  "photo.search.not.found": "No results found.",
   "photo.form.tags.label": "Enter label:",
   "photo.buttons.tag.add": "Add tag",
   "photo.form.name.label": "Enter photo name:",
