--- a/src/assets/i18n/_lt.json
+++ b/src/assets/i18n/_lt.json
@@ -1,13 +1,10 @@
 {
-  "shared.error.bad.request": "",
-  "shared.error.not.found": "",
-  "shared.error.internal.server": "",
   "photo.name": "Nuotraukos pavadinimas:",
   "photo.upload.date": "Įkėlimo data:",
   "photo.tags": "Nuotraukos žymės:",
   "photo.description": "Nuotraukos aprašas:",
   "photo.upload": "Įkelti nuotrauką",
-  "shared.not.found.error": "Rezultatas nerastas.",
+  "photo.search.not.found": "Rezultatas nerastas.",
   "photo.form.tags.label": "Įveskite žymę:",
   "photo.buttons.tag.add": "Pridėti žymę",
   "photo.form.name.label": "Įveskite nuotraukos pavadinimą:",
