--- a/src/assets/i18n/_lt.json
+++ b/src/assets/i18n/_lt.json
@@ -1,26 +1,30 @@
 {
-  "photo.name": "Nuotraukos pavadinimas:",
-  "photo.upload.date": "Įkėlimo data:",
-  "photo.tags": "Nuotraukos žymės:",
-  "photo.description": "Nuotraukos aprašas:",
-  "photo.upload": "Įkelti nuotrauką",
-  "photo.search.not.found": "Rezultatas nerastas.",
-  "photo.form.tags.label": "Įveskite žymę:",
-  "photo.buttons.tag.add": "Pridėti žymę",
-  "photo.form.name.label": "Įveskite nuotraukos pavadinimą:",
-  "photo.form.name.error": "Pavadinimas netinkamas",
-  "photo.form.image.label": "Įkelti nuotrauką:",
-  "photo.form.image.error": "Nuotrauka netinkama",
-  "photo.form.preview": "Nuotraukos peržiūra",
-  "photo.form.description.label": "Įveskite nuotraukos aprašą:",
-  "photo.buttons.upload.photo": "Įkelti nuotrauką",
-  "photo.search.name.label": "Ieškoti pagal nuotraukos pavadinimą",
-  "photo.search.expand.label": "",
-  "photo.search.id.label": "",
-  "photo.search.description.label": "",
-  "photo.search.date.start.label": "",
-  "photo.search.date.end.label": "",
-  "header.upload": "Įkelti nuotrauką",
-  "header.language.english": "English",
-  "header.language.lithuanian": "Lietuvių"
+	"photo.name": "Nuotraukos pavadinimas:",
+	"photo.upload.date": "Įkėlimo data:",
+	"photo.tags": "Nuotraukos žymės:",
+	"photo.description": "Nuotraukos aprašas:",
+	"photo.upload": "Įkelti nuotrauką",
+	"photo.search.not.found": "Rezultatas nerastas.",
+	"photo.edit.title": "",
+	"photo.form.tags.label": "Įveskite žymę:",
+	"photo.buttons.tag.add": "Pridėti žymę",
+	"photo.form.name.label": "Įveskite nuotraukos pavadinimą:",
+	"photo.form.name.error": "Pavadinimas netinkamas",
+	"photo.form.image.label": "Įkelti nuotrauką:",
+	"photo.form.image.error": "Nuotrauka netinkama",
+	"photo.form.preview": "Nuotraukos peržiūra",
+	"photo.form.description.label": "Įveskite nuotraukos aprašą:",
+	"photo.buttons.upload.photo": "Įkelti nuotrauką",
+	"photo.search.name.label": "Ieškoti pagal nuotraukos pavadinimą",
+	"photo.search.expand.label": "",
+	"photo.search.id.label": "",
+	"photo.search.description.label": "",
+	"photo.search.date.start.label": "",
+	"photo.search.date.end.label": "",
+	"header.upload": "Įkelti nuotrauką",
+	"header.language.english": "English",
+	"header.language.lithuanian": "Lietuvių",
+	"shared.error.400": "",
+	"shared.error.404": "",
+	"shared.error.500": ""
 }
